apps/development/odc/explorer-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datacube-explorer-ingress
  namespace: open-datacube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: explorer.dev.pik-sel.id
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - explorer.dev.pik-sel.id
      secretName: explorer-ingress
  rules:
    - host: explorer.dev.pik-sel.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datacube-explorer-service
                port:
                  number: 8080
